# vox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: vox.pc.in
example/: .gitignore
example/first-person-camera/: CMakeLists.txt
example/first-person-camera/shaders/: standard.fragment.glsl  standard.vertex.glsl
example/first-person-camera/src/: fpscamera.cpp  fpscamera.hpp  main.cpp
include/vox/: bindings.hpp  camera.hpp  color.hpp  cursor.hpp  environment.hpp  gl.hpp  keyboard.hpp  log.hpp  mesh.hpp  model.hpp  object.hpp  shader.hpp  texture.hpp  vertex.hpp  vox.hpp
include/vox/ui/: bindings.hpp  menu.hpp  window.hpp
libs/: CMakeLists.txt
src/: camera.cpp  cursor.cpp  environment.cpp  mesh.cpp  model.cpp  object.cpp  shader.cpp  texture.cpp  vox.cpp
src/ui/: window.cpp
